# ksp-bootstraps

./: README.md  pyproject.toml
.github/workflows/: pypi-release.yml
src/ksp_bootstraps/: bootstrap.py  gradle.py
src/ksp_bootstraps/bootstraps/: __init__.py
src/ksp_bootstraps/bootstraps/kivy/: __init__.py  gradle_build_files.py  kivy_gradle.py  kivy_xcode.py  xcode_project_builder.py
src/ksp_bootstraps/gradle/: android_manifest_template.py  build_gradle_template.py
src/ksp_bootstraps/pyproject_models/: pyproject_toml.py
src/ksp_bootstraps/pyproject_models/kivy_school/: apple.py  gradle.py
src/ksp_bootstraps/xcode/: project_spec.py  project_target.py  spec_merge.py  xcodegen_runner.py
tests/: test.py
