[project]
name = "ksp-bootstraps"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "psychowasp", email = "psychowaspx@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
